fix upload image shop and produt